2015-07-06  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	- 評価値のセルをダブルクリックすることで評価値を編集可能に変更
	- 表示中の行動列一覧の評価値と特徴ベクトルをSVMRank用の訓練データ
	としてファイル保存する機能を追加
	- 行動内容のセルをダブルクリックすることで行動列の詳細ダイアログの
	表示するように変更

2015-06-30  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/model/action_sequence_description.h:
	* src/model/action_sequence_log_parser.cpp:
	* src/qt4/action_sequence_selector.cpp:
	- ランク情報を別途読み込む処理を追加

2015-06-26  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	- ウィジェット初期化処理の整理
	- コンテキストメニューの追加．内部の処理は未実装

	* src/qt4/debug_message_window.cpp:
	* src/qt4/debug_message_window.h:
	- オフライン実行のための起動スクリプトをダイアログで選択、終了後に
	設定ファイルへ保存する機能を追加

2014-06-18  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/field_canvas.cpp:
	- EvaluationWindowを誤って使用しないように，中ボタンクリックのメ
	ニューを無効化

	* src/qt4/debug_message_window.cpp:
	- 解像度低目のモニタ用に，DebugMessageWindowのデフォルトサイズを
	800x600へ変更

2013-06-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/model/action_sequence_description.h:
	* src/model/action_sequence_log_parser.cpp:
	* src/qt4/debug_log_painter.cpp:
	- 行動列描画時に各行動の安全レベルと評価値を文字で描画する機能を追加

2013-06-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/model/action_sequence_log_parser.cpp:
	- 最後の行動列データが登録されていなかったバグを修正

2013-06-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/debug_message_window.cpp:
	- syncボタンに対するスロットをsyncAll()に変更

2013-06-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/draw_config.cpp:
	- デフォルト色の誤りを修正

2013-05-31  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/model/options.cpp:
	* src/model/options.h:
	* src/qt4/player_painter.cpp:
	* src/qt4/player_painter.h:
	* src/qt4/view_config_dialog.cpp:
	* src/qt4/view_config_dialog.h:
	- プレイヤの最大移動範囲を描画する機能を追加

	* src/qt4/debug_message_window.cpp:
	- ログレベルが未選択の場合はメッセージが全て消去されるように修正
